<resources>
    <string name="app_name">TamLe</string>
    <string name="textview_text_scratch">scratch</string>
    <string name="textview_text_start_scratch"> Start\nfrom Scratch</string>
    <string name="textview_text_welcome_back">Welcome Back!</string>
    <string name="textview_text_please_login_to_continue">Please login to continue.</string>
    <string name="textview_text_email_address">Email address</string>
    <string name="edittext_text_user_email_com">user@email.com</string>
    <string name="textview_text_password">Password</string>
    <string name="textview_text_forgot_password">Forgot password?</string>
    <string name="edittext_hint_password">●●●●●●●●</string>
    <string name="button_text_login">Login</string>
    <string name="textview_text_new_to_scratch">New to Scratch?</string>
    <string name="textview_text_create_account_here">Create Account Here</string>
    <string name="textview_text_create_account_to_continue">Create account to continue.</string>
    <string name="textview_text_full_name">Full Name</string>
    <string name="edittext_text_nick_evans">Nick Evans</string>
    <string name="textview_text_already_have_an_account">Already have an account?</string>
    <string name="textview_text_login_here">Login Here</string>
    <string name="textview_text_back_to_profile">Back to Profile</string>
    <string name="textview_text_edit_profile">Edit Profile</string>
    <string name="textview_text_edit_profile_picture">Edit Profile Picture</string>
    <string name="textview_text_bio">Bio</string>
    <string name="edittext_text_potato_master">Potato Master</string>
    <string name="textview_text_private_information">Private Information</string>
    <string name="textview_text_phone">Phone</string>
    <string name="edittext_text_1_234_567_89">+1 234 567 89</string>
    <string name="button_text_save_profile">Save Profile</string>
    <string name="textview_text_email">Email</string>
    <string name="edittext_hint_enter_name">Enter name</string>
    <string name="edittext_hint_enter_bio">Enter Bio</string>
    <string name="edittext_hint_enter_email">Enter email</string>
    <string name="edittext_hint_enter_phone">Enter phone</string>
    <string name="button_text_create_account">Create Account</string>
    <string name="textview_text_edit_todo">Edit Todo</string>
    <string name="edittext_text_add_todo">Add Todo</string>
    <string name="edittext_text_user_name">username</string>
    <string name="edittext_text_nick_name">nickname</string>
    <string name="edittext_text_pass_word">password</string>
    <string name="button_text_edit_profile">edit profile</string>
    <string name="button_text_register">register</string>
    <string name="textview_text_done">DONE 1</string>
    <string name="textview_text_todo">Todo 1</string>
    <string name="textview_logout">logout</string>
    <string name="textview_text_home">home</string>
    <string name="menu_add_todo">Add Todo</string>
    <string name="ko_dc_de_trong">Không được để trống todo</string>
    <string name="action_ok">OK</string>
    <string name="them_thanh_cong">Thêm thành công!</string>
    <string name="them_that_bai">Thêm thất bại!</string>
    <string name="home_page">Home Page</string>
    <string name="tai_khoan_ko_hop_le">Tài khoản ko hợp lệ</string>
    <string name="mat_khau_ko_hop_le">Mật khẩu ko hợp lệ. Xin kiểm tra lại!</string>
    <string name="mat_khau_ko_dung">Mật khẩu ko đúng</string>
    <string name="message_dang_ky_tai_khoan_moi">Tài khoản ko tồn tại.\nBạn muốn đăng ký tài khoản mới ko ?</string>
    <string name="ban_chua_chon_anh_dai_dien">Bạn chưa chọn ảnh đại diện</string>
    <string name="co_loi_xay_ra">Có lỗi xảy ra</string>
    <string name="username_ko_hop_le">User name ko hợp lệ</string>
    <string name="username_da_dc_dang_ky">Username đã được đăng ký. Vui lòng chọn username khác</string>
    <string name="dang_ky_thanh_cong">Đăng ký thành công!</string>
    <string name="dang_ky_that_bai">Đăng ký thất bại!</string>
    <string name="nickname_ko_hop_le">Nick name ko hợp lệ. Xin kiểm tra lại!</string>
    <string name="edit_user">Edit User</string>
    <string name="add_todo">Add Todo</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="xoa_thanh_cong">Xóa thành công!</string>
    <string name="xoa_that_bai">Xóa thất bại!</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="ban_chua_nhap_todo">Bạn chưa nhập todo</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công!</string>
    <string name="cap_nhat_that_bai">Cập nhật thất bại!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">todo</string>
    <string name="done">done</string>
</resources>

