<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asiantech.internship.summer.exercise.SignActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_16dp" />


    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_280dp"
        android:fontFamily="@font/nunito_bold"
        android:scaleType="centerCrop"
        android:src="@drawable/img_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/icLogo"
        android:layout_width="@dimen/width_20dp"
        android:layout_height="@dimen/height_30dp"
        android:layout_marginTop="@dimen/margin_top_54dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tvCratch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_8dp"
        android:text="@string/textview_text_scratch"
        android:textColor="#464946"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/icLogo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icLogo"
        app:layout_constraintTop_toTopOf="@+id/icLogo" />

    <TextView
        android:id="@+id/tvStart"
        style="@style/TextStyle"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_40dp"
        android:text="@string/textview_text_start_scratch"
        android:textColor="#030f09"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/icLogo" />


    <TextView
        android:id="@+id/tvCreate"
        style="@style/ParagraphLeftTextGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/textview_text_create_account_to_continue"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/imgPhoto" />

    <TextView
        android:id="@+id/tvFull"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:text="@string/textview_text_full_name"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvCreate" />

    <EditText
        android:id="@+id/edtFullName"
        style="@style/Lead"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:hint="@string/edittext_hint_enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/edittext_text_nick_evans"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvFull" />

    <TextView
        android:id="@+id/tvAddress"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:text="@string/textview_text_email_address"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Lead"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/edittext_text_user_email_com"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:text="@string/textview_text_password"
        android:textColor="#a8a8a8"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:hint="@string/edittext_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lineSpacingExtra="1.5sp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_54dp"
        android:layout_marginTop="@dimen/margin_top_20dp"
        android:background="@drawable/btn_line"
        android:text="@string/button_text_create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/tvAlready"
        style="@style/ParagraphCenterTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_24dp"
        android:text="@string/textview_text_already_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/tvHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:text="@string/textview_text_login_here"
        android:textColor="#30be76"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvAlready" />

</androidx.constraintlayout.widget.ConstraintLayout>

