<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asiantech.internship.summer.exercise.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_16dp" />

    <ImageView
        android:id="@+id/icLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_54dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_draw" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica"
        android:text="@string/textview_text_back_to_profile"
        android:textColor="#767676"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toBottomOf="@id/icLogo"
        app:layout_constraintLeft_toRightOf="@id/icLogo"
        app:layout_constraintTop_toTopOf="@id/icLogo" />

    <TextView
        android:id="@+id/tvProfile"
        style="@style/H3BlackLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/textview_text_edit_profile"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/icLogo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/width_100dp"
        android:layout_height="@dimen/height_100dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:src="@drawable/ic_man"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvProfile" />

    <TextView
        android:id="@+id/tvPicture"
        style="@style/TextButtonCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:text="@string/textview_text_edit_profile_picture"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/imgProfile" />


    <TextView
        android:id="@+id/tv2"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_24dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/textview_text_full_name"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvPicture" />

    <EditText
        android:id="@+id/edtFullName"
        style="@style/Lead"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:fontFamily="@font/helvetica"
        android:hint="@string/edittext_hint_enter_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tvBio"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/textview_text_bio"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

    <EditText
        android:id="@+id/edtBio"
        style="@style/Lead"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:fontFamily="@font/helvetica"
        android:hint="@string/edittext_hint_enter_bio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/edittext_text_potato_master"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvBio" />

    <TextView
        android:id="@+id/tvPrivate"
        style="@style/H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_24dp"
        android:text="@string/textview_text_private_information"
        android:textColor="#0F0F0F"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/edtBio" />

    <TextView
        android:id="@+id/tv5"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/textview_text_email"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivate" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Lead"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:hint="@string/edittext_hint_enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv5" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_4dp"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/textview_text_phone"
        android:textColor="#a8a8a8"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_4dp"
        android:fontFamily="@font/helvetica"
        android:hint="@string/edittext_hint_enter_phone"
        android:importantForAutofill="no"
        android:inputType="textPhonetic"
        android:lineSpacingExtra="1.5sp"
        android:text="@string/edittext_text_1_234_567_89"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_54dp"
        android:layout_marginTop="@dimen/margin_top_24dp"
        android:background="@drawable/btn_line"
        android:text="@string/button_text_save_profile"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/edtPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>
